#135 Fix block z-index when focused

--- a/src/components/BlockDetail.css
+++ b/src/components/BlockDetail.css
@@ -6,6 +6,10 @@
   pointer-events: none;
 }
 
+.BlockDetail:focus-within {
+  z-index: 12;
+}
+
 .BlockDetail-linking:focus-within,
 .BlockDetail-linking:hover {
   z-index: 20;
